ops/deploy/k8s/overlays/local-kind/patch-backend-media-storage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: funforum
spec:
  template:
    spec:
      containers:
        - name: backend
          volumeMounts:
            - name: backend-media-assets
              mountPath: /var/media-assets
      volumes:
        - name: backend-media-assets
          persistentVolumeClaim:
            claimName: backend-media-assets
